# idel-dream-maker

./: .gitignore  CLAUDE.md  CONTRIBUTING.md  DECISIONS.md  LICENSE  README.md  TASKS.md  build.js  combo-preview.html  debug-pet.html  index.html  mcp-server.cjs  merge.cjs  package-lock.json  package.json  start-dev.bat  start-dev.ps1  start.bat  test_output.txt  text-shadow-prototype.html  update_hermit.cjs  update_hermit.ps1  validate_flags.cjs  validate_md.cjs  validate_segments.cjs  vite.config.js  剧本MD格式模板.md  剧本设定集.md  副本MD格式模板.md  副本设定集.md  同步UI原型.html  架构文档.md  节假日事件池.md
docs/: ai-prompt-template.md  creating-scenarios.md  example-hello-world.md  format-rules.md
electron/: holiday.cjs  main.cjs  main.js  pet-bubble-preload.cjs  pet-bubble.cjs  pet-context-menu-preload.cjs  pet-context-menu.cjs  pet-preload.cjs  pet-selector-preload.cjs  pet-selector.cjs  pet.cjs  preload.cjs  preload.js  tray.cjs  windows.cjs
icons/: icon.icns
pet/: index.html  pet.js  style.css
pet-bubble/: index.html  script.js  style.css
pet-context-menu/: index.html  script.js  style.css
pet-selector/: index.html  script.js  style.css
public/: holidays.json  scenarios_data.json
scenarios/: _r0_filler_add.txt  gen_rebirth2.py  generate.ps1  generate_rebirth2.ps1  hermit.md  starfarer.md  starfield.md  test_utf8.py  wasteland.md  wasteland_filler_round0.md  wasteland_rebirth1_content.md  wasteland_rebirth2_content.md  wasteland_rebirth3_content.md
scenarios_user/: README.md
scripts/: generate-icon.mjs  inject-icon.cjs  merge-ico.cjs
src/: game.js  main.js  scenario-parser.cjs  scenario.js  style.css
src-tauri/: Cargo.toml  build.rs  tauri.conf.json
src-tauri/capabilities/: default.json
src-tauri/fonts/: README.md
src-tauri/icons/: icon.icns
src-tauri/scenarios/: wasteland.json  wasteland.md
src-tauri/src/: game.rs  lib.rs  main.rs  scenario.rs
temp/: _fix_cols2.cjs  _fix_columns.cjs  _fix_newlines.cjs  _remerge.cjs  test_frontmatter.md  test_holidays.md  test_output.md  test_output2.md  test_seg1.md  test_seg2.md  test_titles.md  wasteland_achievements.md  wasteland_ai_seg1.md  wasteland_ai_seg2.md  wasteland_ai_seg3.md  wasteland_ai_seg4.md  wasteland_frontmatter.md  wasteland_holidays.md  (+34 more)
(+9 files in other folders)
