[package]
name = "idleworker"
version = "0.2.0"
description = "IdleWorker - A zero-interaction idle narrative game"
authors = []
edition = "2024"

[lib]
name = "idleworker_lib"
crate-type = ["staticlib", "cdylib", "rlib"]

[build-dependencies]
tauri-build = { version = "2", features = [] }

[dependencies]
tauri = { version = "2", features = ["tray-icon", "image-png"] }
tauri-plugin-shell = "2"
tauri-plugin-notification = "2"
serde = { version = "1", features = ["derive"] }
serde_json = "1"
rand = "0.8"
chrono = { version = "0.4", features = ["serde"] }

[profile.release]
strip = true
lto = true
codegen-units = 1
panic = "abort"
