[package]
name = "idel-dream-maker"
version = "0.3.0"
description = "Idel-DreamMaker - A zero-interaction idle narrative game with Hub system"
authors = []
edition = "2024"

[lib]
name = "idel_dream_maker_lib"
crate-type = ["staticlib", "cdylib", "rlib"]

[build-dependencies]
tauri-build = { version = "2", features = [] }

[dependencies]
tauri = { version = "2", features = ["tray-icon", "image-png"] }
tauri-plugin-shell = "2"
tauri-plugin-notification = "2"
serde = { version = "1", features = ["derive"] }
serde_json = "1"
rand = "0.8"
chrono = { version = "0.4", features = ["serde"] }

[profile.release]
strip = true
lto = true
codegen-units = 1
panic = "abort"
